--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,4 @@ populartimes_api:
   volumes:
     - /usr/src/app/static
   env_file: .env
-  command: /usr/local/bin/gunicorn -w 4 --bind :5001 main:app
+  command: /usr/local/bin/gunicorn -w 4 --bind :5001 PopularTimesService:app
