--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,15 @@ populartimes_api:
     - /usr/src/app/static
   env_file: .env
   command: /usr/local/bin/gunicorn -w 4 --bind :5001 PopularTimesService:app
+
+proxy:
+  restart: always
+  build: ./proxy
+  expose:
+    - "80"
+  ports:
+    - "80:80"
+  volumes_from:
+    - populartimes_api
+  links:
+    - populartimes_api:populartimes_api
