--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,26 @@
-populartimes_api:
-  restart: always
-  build: ./PopularTimesService
-  expose:
-    - "5001"
-  ports:
-    - "5001:5001"
-  volumes:
-    - /usr/src/app/static
-  env_file: .env
-  command: /usr/local/bin/gunicorn -w 4 --bind :5001 PopularTimesService:app
+version: 3
 
-proxy:
-  restart: always
-  build: ./proxy
-  expose:
-    - "80"
-  ports:
-    - "80:80"
-  volumes_from:
-    - populartimes_api
-  links:
-    - populartimes_api:populartimes_api
+services:
+  populartimes_api:
+    restart: always
+    build: ./PopularTimesService
+    expose:
+      - "5001"
+    ports:
+      - "5001:5001"
+    volumes:
+      - /usr/src/app/static
+    env_file: .env
+    command: /usr/local/bin/gunicorn -w 4 --bind :5001 PopularTimesService:app
+
+  proxy:
+    restart: always
+    build: ./proxy
+    expose:
+      - "80"
+    ports:
+      - "80:80"
+    volumes_from:
+      - populartimes_api
+    links:
+      - populartimes_api:populartimes_api
