--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     command: /usr/local/bin/gunicorn -w 4 --bind :5001 PopularTimesService:app
 
   proxy:
+    image: 127.0.0.1:5000/populartimes_proxy
     restart: always
     build: ./proxy
     expose:
